Adjustments to window layout to set a proper width and height of the root elements with also the prevention of root table scrollbar; Proper handling of output directory dialog cancellation; File name validation prototype on CreateFragment

--- a/sass/bulmamods.scss
+++ b/sass/bulmamods.scss
@@ -37,13 +37,27 @@ $input-imod-color: $white-d;
     font-style: normal;
     src: url('../webfonts/ShareTech-Regular.ttf') format('truetype');
 }
+
+html {
+    overflow-y: auto !important;
+}
+
 body {
     // -ms-overflow-style: scrollbar;
     // -webkit-app-region: drag;
     font-family: 'Share Tech', 'sans-serif';
     font-size: 18px;
-    overflow-y: auto;
+    width: 950px !important;
+    height: 700px !important;
 }
+
+table.root-table {
+    width: 950px;
+    height: 700px;
+    table-layout: fixed;
+    margin: 0px !important;
+}
+
 
 
 /* Color helpers */
